cmake_minimum_required(VERSION 3.17)
project(TinyWebserver)
file(GLOB SOURCES
        *.h
        *.cpp
        )
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release)
find_path(MYSQL_ROOT_DIR mysql)
add_subdirectory(timer)
#add_subdirectory(Imysql)
add_subdirectory(http)
add_subdirectory(log)
include_directories(/user/include/mysql)
add_executable(TinyWebserver ${SOURCES})
#target_link_libraries(TinyWebserver Imysql)
target_link_libraries(TinyWebserver timer http log mysqlclient)
target_link_libraries(TinyWebserver /usr/lib/x86_64-linux-gnu/libjsoncpp.so)
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
        file(COPY ${CMAKE_SOURCE_DIR}/root DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG})
endif ()
if (CMAKE_BUILD_TYPE STREQUAL "Release")
        file(COPY ${CMAKE_SOURCE_DIR}/root DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE})
endif ()